tests/fixtures/invalid/pow_none_list_bool.py
# Cannot call pow() with None, List[int], Bool
x = pow(None, [1, 2, 3], True)
